# Financial-Checker

./: .flake8  .gitignore  environment.yml  pyproject.toml
docker/: Dockerfile.app
src/financialchecker/analytics/: app.py
src/financialchecker/app/: main.py
src/financialchecker/data/: aggregate.py  estimates.py  loader.py
src/financialchecker/database/mongodb/: database.py  models.py
src/financialchecker/dynamics/: ODE.py
src/financialchecker/log/: log.py  models.py
src/financialchecker/transactions/: _transactions.py  expense.py  income.py
src/financialchecker/utils/: exceptions.py  settings.py  utils.py
