[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "FinancialChecker"
description = "Analytical and Predicting tools for Personal Financial Situation"
authors = [
  { email = "marionicdematteis@gmail.com" },
]
maintainers = [
  { email = "marionicdematteis@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dynamic = ["version"]
keywords = [
]
classifiers = [
]

dependencies = [
  "argparse==1.4.0",
  "beartype==0.18.5",
  "kaleido==0.2.1",
  "matplotlib==3.9.2",
  "numpy==2.1.0",
  "omegaconf==2.3.0",
  "pandas==2.2.2",
  "plotly==5.23.0",
  "scipy==1.14.1",
  "streamlit==1.37.1",
  "plotly==5.23.0",
  "pydantic-settings==2.4.0",
  "pydantic==2.8.2",
  "pymongo[srv]==3.11"
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
  "pytkdocs[numpy-style]",
]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]

[project.urls]
Repository = "https://github.com/BopaxDev/FinancialChecker"

[tool.black]
line-length = 88

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "if __name__ == .__main__.:", "no cov"]

[tool.coverage.run]
branch = true
parallel = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]